[workspace]
members = [
    "support",
    "basic",
    "dynamic_obstacles",
    "layered_2_5d",
    "large_grid",
    "async_queries",
    "filters_and_costs",
    "debug_viz",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
futures-lite = "2"
saddle-ai-hpa-pathfinding = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
