[package]
name = "saddle-ai-hpa-pathfinding-example-debug-viz"
version = "0.1.0"
edition = "2024"
publish = false

[features]
e2e = ["saddle-ai-hpa-pathfinding-example-support/e2e", "dep:saddle-bevy-e2e"]

[dependencies]
bevy = { workspace = true }
bevy_flair = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }
saddle-pane = { workspace = true }
saddle-ai-hpa-pathfinding = { workspace = true }
saddle-ai-hpa-pathfinding-example-support = { path = "../support" }
saddle-bevy-e2e = { workspace = true, optional = true }

[lints]
workspace = true
