[package]
name = "saddle-ai-hpa-pathfinding-example-flow-field"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-pane = { workspace = true }
saddle-ai-hpa-pathfinding = { workspace = true }
saddle-ai-hpa-pathfinding-example-support = { path = "../support" }

[lints]
workspace = true
